<resources>
    <string name="app_name">Juggle</string>
    <string name="title_home">Home</string>
    <string name="title_eventslist">Events List</string>
    <string name="title_addevent">Add Event</string>
    <string name="title_signout">SignOut</string>
    <string name="title_revoke">Revoke</string>
    <string name="addRelatedEvent">Add Related</string>
    <string name="hint_alias">Enter an alias</string>
    <string name="hint_role">pick a role</string>
    <string-array name="role_array">
        <item>Choose a role</item>
        <item>Juggler</item>
        <item>Juggled</item>
    </string-array>
    <string name="login_text">Juggle</string>
    <string name="login_image">Login Image</string>

    <string name="saveUserBtn">Continue</string>
    <string name="userGoogle">Welcome</string>
    <string name="userJugglersHeading">Jugglers: </string>
    <string name="userJugglers">none assigned</string>
    <string name="userJuggledHeading">Juggled: </string>
    <string name="userJuggled">none assigned</string>
    <string name="editUserBtn">Update</string>


<!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- 13Mar22 -->

    <string name="tickTockText">Getting Calendar Stuff…</string>

    <!-- Event View Fragment -->
    <string name="calendarSummaryHeading">Calendar:</string>
    <string name="eventSummaryHeading">Summary:</string>
    <string name="eventStartHeading">Start:</string>
    <string name="eventStartDateHeading">Start Date:</string>
    <string name="eventStartTimeHeading">Start Time:</string>
    <string name="eventEndHeading">End:</string>
    <string name="eventEndDateHeading">End Date:</string>
    <string name="eventEndTimeHeading">End Time:</string>
    <string name="eventCreatedDateHeading">Created:</string>
<!--    <string name="eventCreatedTimeHeading">Created Time:</string>-->
    <string name="addNewEventHeading">Add a New Event</string>
    <string name="relatedEventsHeading">Related Events:</string>
<!--    <string name="hint_newEventSummary">Event Summary</string>-->
<!--    <string name="hint_newEventStartDate">Start Date</string>-->
<!--    <string name="hint_newEventStartTime">New Event Start Time</string>-->
<!--    <string name="hint_newEventEndDate">New Event End Date</string>-->
<!--    <string name="hint_newEventEndTime">New Event End Time</string>-->
    <string name="eventJuggler">Juggler</string>

<!--    Add Event Fragment-->
    <string-array name="addEventType">
        <item>Dinner</item>
        <item></item>
    </string-array>
    <string name="summary">Add a summary</string>
    <string name="defaultStartTime">17:30</string>
    <string name="defaultEndTime">18:30</string>

</resources>