<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addevent.AddEventFragment">

    <TextView
        android:id="@+id/text_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardAddEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/addEventTypeHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="Type:"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="@id/guidelineHeadings"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/addEventTypeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/guidelineDetail"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/addEventSummaryHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="Summary:"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="@id/guidelineHeadings"
                app:layout_constraintTop_toBottomOf="@id/addEventTypeSpinner" />

            <EditText
                android:id="@+id/eventSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/summary"
                android:textSize="14sp"
                android:inputType="text"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@id/guidelineDetail"
                app:layout_constraintTop_toBottomOf="@+id/addEventTypeSpinner"/>

            <TextView
                android:id="@+id/eventStartDateHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/eventStartDateHeading"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="@id/guidelineHeadings"
                app:layout_constraintTop_toBottomOf="@+id/eventSummary" />

            <EditText
                android:id="@+id/eventStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:hint="@string/eventStartDateHeading"
                android:textSize="14sp"
                android:inputType="date"
                app:layout_constraintStart_toStartOf="@id/guidelineDetail"
                app:layout_constraintTop_toBottomOf="@+id/eventSummary" />

            <TextView
                android:id="@+id/eventStartTimeHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/eventStartTimeHeading"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="@id/guidelineHeadings"
                app:layout_constraintTop_toBottomOf="@+id/eventStartDate" />

            <EditText
                android:id="@+id/eventStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:hint="@string/eventStartTimeHeading"
                android:textSize="14sp"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="@id/guidelineDetail"
                app:layout_constraintTop_toBottomOf="@+id/eventStartDate" />

            <TextView
                android:id="@+id/eventEndDateHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/eventEndDateHeading"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="@id/guidelineHeadings"
                app:layout_constraintTop_toBottomOf="@+id/eventStartTime" />

            <EditText
                android:id="@+id/eventEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:hint="@string/eventEndDateHeading"
                android:textSize="14sp"
                android:inputType="date"
                app:layout_constraintStart_toStartOf="@id/guidelineDetail"
                app:layout_constraintTop_toBottomOf="@+id/eventStartTime" />

            <TextView
                android:id="@+id/eventEndTimeHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/eventEndTimeHeading"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="@id/guidelineHeadings"
                app:layout_constraintTop_toBottomOf="@+id/eventEndDate" />

            <EditText
                android:id="@+id/eventEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:hint="@string/eventEndTimeHeading"
                android:textSize="14sp"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="@id/guidelineDetail"
                app:layout_constraintTop_toBottomOf="@+id/eventEndDate" />



            <Button
                android:id="@+id/addNewEventBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventEndTime" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHeadings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="8dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="120dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
    </FrameLayout>
</layout>